<resources>
    <string name="app_name">colores</string>
    <string name="title1">Menu Principal</string>
    <string name="boton1">Agregar</string>
    <string name="boton2">Mostrar</string>
    <string name="titulo2">Agregar </string>
    <string name="txtplano">Ingreser</string>
    <string name="boton3">Agregar</string>
    <string name="boton4">Mostrar </string>
    <string name="boton5">Menu </string>
    <string name="titulo3">Colores</string>
    <string name="boton6">Agregar</string>
    <string name="boton7">Menu</string>

</resources>
