<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View_Activity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="78dp"
        android:layout_height="46dp"
        android:layout_marginTop="92dp"
        android:text="@string/titulo3"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerview"
        android:layout_width="210dp"
        android:layout_height="102dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="76dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="110dp"
        android:layout_height="38dp"
        android:layout_marginTop="52dp"
        android:onClick="iragregar"
        android:text="@string/boton6"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerview" />

    <Button
        android:id="@+id/button7"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:onClick="Menuprincipal"
        android:text="@string/boton7"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />
</androidx.constraintlayout.widget.ConstraintLayout>